# ctpn-cpp

./: CMakeLists.txt  README.md
src/: connect.h  detector.h  nms.h  text_proposal_layer.h
test/: test.cpp
